--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-body{
-  overflow-x:hidden;
+body {
+  overflow-x: hidden;
 }
 
 @tailwind base;
@@ -9,6 +9,12 @@ body{
 @tailwind utilities;
 
 
-.text-outline{
-  -webkit-text-stroke:2px #000;
+.text-outline {
+  -webkit-text-stroke: 2px #000;
+}
+
+@layer utilities {
+  footer ul li:hover {
+    @apply text-darkGreen duration-500 underline transition-all;
+  }
 }
